--- a/Universal Package Manager White Paper 1.6
+++ b/Universal Package Manager White Paper 1.6
@@ -43,4 +43,5 @@ Goal 3 of phase 3: Have a catagory called verrified apps, either from trusted re
 
 Phase 4: Creat a simple to use app creation and or enhancing AI which will be trained on code uploaded to our repos or various other sources such as code from robust opensource application or the AI could be used for the (POSSIBLE) code interperetation system within the sandboxed environment.
 
+NOTE: Perhaps phase 4 could be intagrated into Phase 2 (sandboxed enivronment) by using an AI to read the code, interperate it then execute it?
 
