--- a/App Seller V1.1
+++ b/App Seller V1.1
@@ -19,7 +19,7 @@ contract reciever{
 
       amountrecievd = msg.value;
 
-      if(msg.value >= price){
+      if(msg.value == msg.value + price){
 
           downloads ++;
 
